# libsharaku.old

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
devices/: CMakeLists.txt  Makefile
devices/color/: ev3dev-color.cpp  hook-color.cpp  simuration-color.cpp
devices/configs/: sharaku.config
devices/gyro/: ev3dev-gyro.cpp  hook-gyro.cpp
devices/motor/: ev3dev-tacho-motor.cpp  hook-motor.cpp  simuration-motor.cpp
devices/power/: ev3dev-power-supply.cpp  hook-powersupply.cpp
devices/proc/: ev3dev-proc-device.cpp  linux-proc-device.cpp
devices/sd/: sd-balancer.cpp  sd-linetrace-pid.cpp  sd-linetrace.cpp  sd-motors.cpp  sd-position-move.cpp  sd-target-run.cpp  sd-wheel-odometry.cpp
devices/sd/ev3way/: balancer.c  balancer.h  balancer_param.c  balancer_private.h  ev3way-balancer.cpp
devices/touch/: ev3dev-touch.cpp  hook-touch.cpp
devices/usonic/: ev3dev-ultrasonic.cpp  hook-ultrasonic.cpp
include/devices/: api.hpp  connection_interface.hpp  motor-api.hpp  moving-api.hpp  odmetry-api.hpp  sensor-api.hpp  update-api.hpp
include/devices/color/: ev3dev-color.hpp  ev3rt-color.hpp  hook-color.hpp  null-color.hpp  simuration-color.hpp
include/devices/gyro/: ev3dev-gyro.hpp  ev3rt-gyro.hpp  hook-gyro.hpp  null-gyro.hpp
include/devices/motor/: dps2duty-motor.hpp  ev3dev-tacho-motor.hpp  ev3rt-motor.hpp  hook-motor.hpp  null-motor.hpp  simuration-motor.hpp
include/devices/power/: ev3dev-power-supply.hpp  ev3rt-powersupply.hpp  hook-powersupply.hpp  null-powersupply.hpp
include/devices/proc/: ev3dev-proc-device.hpp  linux-proc-device.hpp
include/devices/sd/: null-move.hpp  null-odmetry.hpp  null-target_pos.hpp  sd-balancer.hpp  sd-gear-ratio.hpp  sd-linetrace-pid.hpp  sd-linetrace.hpp  sd-motor-pos-filter.hpp  sd-motors.hpp  sd-position-move.hpp  sd-target-run.hpp  sd-wheel-odometry.hpp
include/devices/sd/ev3way/: ev3way-balancer.hpp
include/devices/touch/: ev3dev-touch.hpp  ev3rt-touch.hpp  hook-touch.hpp  null-touch.hpp
include/devices/usonic/: ev3dev-ultrasonic.hpp  ev3rt-ultrasonic.hpp  hook-ultrasonic.hpp  null-ultrasonic.hpp
include/modules/: mod-devupdate.hpp  mod-update.hpp
include/sharaku/: activity.h  debug.h  digital-filter.hpp  image.h  jiffies.h  list.h  log.h  module.h  pid.hpp  plist.h  position.hpp  prof.h  rotation.hpp  sched.h  slab.h  system.h  task.h  thread.h  types.h  utime.h  vector.hpp
include/sharaku/linux/: list.h
modules/: CMakeLists.txt  Makefile
modules/mod-update/: mod-update.cpp  mod_devupdate.cpp
platform/itron/: sched-in.c  system-in.c
platform/itron/include/devices/: ev3rt-device-def.h
platform/itron/include/sharaku/: thread.h  utime.h
platform/linux/: fd-in.c  sched-in.c  system-in.c
platform/linux/include/sharaku/: fd.h  thread.h  utime.h
samples/ev3-demo/: ETrikeV.hpp  EV3way.hpp  HackEV.hpp  Makefile  main.cpp
samples/ev3rt-sample/: Makefile.app  Makefile.appmod  Makefile.inc  README.md  app.cfg  app.cpp  app.h  balancer.c  balancer.h  ev3way.cpp  ev3way.hpp
samples/linux-fd-sample/: Makefile  sample_fd.c
samples/linux-sched-sample/: Makefile  sample.c
system/: CMakeLists.txt  Makefile  activity.c  debug.c  jiffies.c  module.c  plist.c  prof.c  sched.c  slab.c  system.c
system/configs/: sharaku.config
system/debug/: log.c  prof.c
system/sched/: sched-linux-in.c  sched-toppers-in.c  sched.c  task-in.h  task.c
system/testset/linux/: Makefile  gtest_fd.cpp  gtest_list.cpp  gtest_pid.cpp  gtest_plist.cpp  gtest_slab.cpp
tools/: libsharaku_tmp_device.sh
tools/character_code/: utf8_to_utf8bm.sh  utf8bm_to_utf8.sh
tools/cmake/: ev3dev-arm.cmake  ev3rt-arm.cmake  linux-x86.cmake
tools/docker/: BUILD.md  Dockerfile  README.md
tools/docker/install/: boost_install.sh  python_install.sh
tools/ev3dev-et.py/: CMakeLists.txt  EV3Way.cpp  EV3way.hpp  HackEV.cpp  HackEV.hpp  Makefile  README.md  libEV3Way.cpp  libEV3Way.hpp  libHackEV.cpp  libHackEV.hpp
tools/integration/: 01-static_check.sh  02-build.sh  03-deproy.sh  04-package.sh  05-testing.sh  Makefile  build.sh  static_check.sh
tools/integration/build-targets/: build.ev3dev.sh
